Traduzindo a app para portugues do Brasil com o arquivo de locale il8n e alterando o ano inicial no cadastro

--- a/app/views/birds/_form.html.erb
+++ b/app/views/birds/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :birthdate %><br />
-    <%= f.date_select :birthdate %>
+    <%= f.date_select :birthdate, :start_year => Time.now.year - 20, :include_blank => true %>
   </div>
   <div class="field">
     <%= f.label :size %><br />
